@@ -52,6 +52,7 @@ any further configuration. Supports log4j1, log4j2 and Logback. {pull}1261[#1261
 * fix sample rate rounded to zero when lower than precision - {pull}1655[#1655]
 * fixed a couple of bugs with the external plugin mechanism (not documented until now) - {pull}1660[#1660]
 * Update to async-profiler 1.8.4 to prevent crashes on Java 7 - {pull}1678[#1678]
+* Fix runtime attach conflict with multiple users - {pull}1704[#1704]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
